Fix lang menu not overflowing body on /skills
git-svn-id: file:///var/svn/skp/trunk@188 54603a6e-7c00-409b-81b0-d312d09a75cd

--- a/web/css/scss/_header.scss
+++ b/web/css/scss/_header.scss
@@ -36,6 +36,10 @@
     }
 }
 
+body.graph #top-user-nav {
+    margin-top: 5px;
+}
+
 #top-user-nav li.last, #top-main-nav li.last {
     margin-right: 0;
 }
